--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
   >
     <!-- navbar -->
     <nav id="navbar-example2" class="navbar navbar-light fixed-top px-3">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a
+        class="navbar-brand"
+        href="#"
+        style="background: url(/your-background-url)"
+      >
+        <img src="./assets/icon/ras.svg"
+      /></a>
       <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link" href="#scrollspyHeading1">Home</a>
@@ -99,10 +105,11 @@
 
               <p>
                 Hi&#128075;, i am Rendi Anjuma Sagala. Currently, i am studying
-                accounting major in Tanjungpura University, Indonesia. Beside my
-                college major, i am interested in technology especially
-                programming. If you interested with my resume and portfolio,
-                please don't mind to reach me on contact below. Thank You!!
+                accounting major 4th semester in Tanjungpura University,
+                Indonesia. Beside my college major, i am interested in
+                technology especially programming. If you interested with my
+                resume and portfolio, please don't mind to reach me on contact
+                below. Thank You!!
               </p>
 
               <div class="col-md-6 d-md-flex align-items-md-stretch">
