fixing line background and change to transparent img

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-7 py-lg-5">
             <img
-              src="./assets/img/rendisagala.jpeg"
+              src="./assets/img/rendisagalatp.png"
               class="d-block mx-lg-auto img-fluid mainImg"
               alt="Bootstrap Themes"
               width="700"
