change copyright section and changing about photo

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
     <!-- about -->
 
-    <section class="section about-section py-5" id="about" style="height: 100%">
+    <section class="section about-section py-5" id="about">
       <div class="container">
         <div
           class="row align-items-center justify-content-around flex-row-reverse"
@@ -195,7 +195,10 @@
             data-aos-duration="5000"
           >
             <div class="about-img">
-              <img src="./assets/img/glasses.png" />
+              <img
+                src="./assets/img/programming.jpg"
+                title="Photo by Markus Spiske"
+              />
             </div>
           </div>
         </div>
@@ -596,52 +599,59 @@
     </section>
 
     <!-- copyright -->
-    <section
-      id="copyright"
-      class="copyright pt-lg-2 bottom-0 row"
-      style="padding-right: 0"
-    >
-      <div class="container d-sm-flex col-lg-11">
-        <div class="me-md-auto text-center text-md-start">
-          <div class="copyright">© Copyright 2022. All Rights Reserved</div>
-          <div class="credits">Web developed by @rendisagala</div>
-        </div>
-        <div class="social-links text-end">
-          <a
-            href="https://github.com/rendisagala"
-            target="_blank"
-            role="button"
-            class="btn-lg instagram"
-            ><i class="fab fa-github ms-lg-4 fa-lg"></i
-          ></a>
-          <a
-            href="https://instagram.com/rendianjuma/"
-            target="_blank"
-            role="button"
-            class="btn-lg instagram"
-            ><i class="fab fa-instagram ms-lg-4 fa-lg"></i
-          ></a>
-          <a
-            href="https://www.facebook.com/rendi.sagala"
-            target="_blank"
-            role="button"
-            class="btn-lg facebook"
-            ><i class="fab fa-facebook ms-lg-4 fa-lg"></i
-          ></a>
-          <a href="javascript:void(0);" target="" role="button" class="twitter"
-            ><i class="fab fa-twitter ms-lg-4 fa-lg btn-lg"></i
-          ></a>
-          <a
-            href="https://linkedin.com/in/rendi-anjuma-sagala-a3b2421b6 "
-            target="_blank"
-            role="button"
-            class="btn-lg linkedin"
-            ><i class="fab fa-linkedin ms-lg-4 fa-lg"></i
-          ></a>
+    <!-- Site footer -->
+    <section id="copyright"></section>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">
+              Copyright &copy; 2017 All Rights Reserved by
+              <a href="javascript:void(0);">@rendisagala</a>.
+            </p>
+          </div>
+
+          <div
+            class="col-md-4 col-sm-6 col-xs-12"
+            data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="5000"
+            data-aos-duration="5000"
+          >
+            <ul class="social-icons">
+              <li>
+                <a class="github" href="https://github.com/rendisagala"
+                  ><i class="fab fa-github"></i
+                ></a>
+              </li>
+              <li>
+                <a class="instagram" href="https://instagram.com/rendianjuma/"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a class="facebook" href="https://www.facebook.com/rendi.sagala"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li>
+                <a class="twitter" href="javascript:void(0);"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  class="linkedin"
+                  href="https://linkedin.com/in/rendi-anjuma-sagala-a3b2421b6"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </section>
-    <!-- script -->
+    </footer>
+
     <script src="./assets/js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./assets/js/smoothScroll.js"></script>
