change portfolio card from img to video

--- a/index.html
+++ b/index.html
@@ -369,15 +369,13 @@
 
         <article class="postcard light blue" data-aos="fade-right">
           <a class="postcard__img_link" href="javascript:void(0);">
-            <img
-              class="postcard__img"
-              src="https://picsum.photos/1000/1000"
-              alt="Image Title"
-            />
+            <video class="portfolioVideo">
+              <source src="./assets/video/whackamole.mp4" type="video/mp4" />
+            </video>
           </a>
           <div class="postcard__text t-dark">
             <h1 class="postcard__title blue">
-              <a href="#">Portfolio Website</a>
+              <a href="#">Whack-a-Mole</a>
             </h1>
             <div class="postcard__subtitle small">
               <time>
@@ -398,11 +396,9 @@
         </article>
         <article class="postcard light red" data-aos="fade-left">
           <a class="postcard__img_link" href="javascript:void(0);">
-            <img
-              class="postcard__img"
-              src="./assets/img/rendisagala.jpeg"
-              alt="Image Title"
-            />
+            <video class="portfolioVideo">
+              <source src="./assets/video/portfolioweb.mp4" type="video/mp4" />
+            </video>
           </a>
           <div class="postcard__text t-dark">
             <h1 class="postcard__title red"><a href="#">Podcast Title</a></h1>
