add techUsed in postcard

--- a/index.html
+++ b/index.html
@@ -379,18 +379,47 @@
             </h1>
             <div class="postcard__subtitle small">
               <time>
-                <i class="fas fa-calendar-alt mr-2"></i>28th January 2022
+                <i class="fas fa-calendar-alt mr-2"></i>10th January 2022
               </time>
             </div>
             <div class="postcard__bar"></div>
             <div class="postcard__preview-txt">
-              This is my portfolio website.
+              Whack-A-Mole is an arcade and carnival game, originally known as
+              Mogura Taiji in Japan. A typical Whac-A-Mole machine consists of a
+              waist-level cabinet with a play area and display screen, and a
+              large, soft, black mallet.
+            </div>
+            <div class="techUsed">
+              <ul class="techUsed__icons">
+                <li class="tag__item">
+                  <i class="fab fa-html5" title="HTML5"></i>
+                </li>
+                <li class="tag__item">
+                  <i class="fab fa-css3-alt" title="CSS3"></i>
+                </li>
+                <li class="tag__item">
+                  <i class="fab fa-js-square" title="JavaScript"></i>
+                </li>
+              </ul>
             </div>
             <ul class="postcard__tagbox">
-              <li class="tag__item">
-                <i class="fab fa-github mr-2"></i>Github
-              </li>
-              <li class="tag__item"><i class="fas fa-link mr-2"></i>Demo</li>
+              <a
+                href="https://github.com/rendisagala/Whack-a-Mole"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <li class="tag__item">
+                  <i class="fab fa-github mr-2"></i>Github
+                </li></a
+              ><a
+                href="https://rendisagala.github.io/Whack-a-Mole/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <li class="tag__item">
+                  <i class="fas fa-link mr-2"></i>Demo
+                </li></a
+              >
             </ul>
           </div>
         </article>
@@ -404,23 +433,45 @@
             <h1 class="postcard__title red"><a href="#">Podcast Title</a></h1>
             <div class="postcard__subtitle small">
               <time>
-                <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
+                <i class="fas fa-calendar-alt mr-2"></i>28th January 2022
               </time>
             </div>
             <div class="postcard__bar"></div>
             <div class="postcard__preview-txt">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-              fugiat asperiores inventore beatae accusamus odit minima enim,
-              commodi quia, doloribus eius! Ducimus nemo accusantium maiores
-              velit corrupti tempora reiciendis molestiae repellat vero. Eveniet
-              ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum
-              dolores nobis enim quidem excepturi, illum quos!
+              My portfolio website, like any other portfolio website, this
+              website provides my professional information about me which is
+              include my resume; my work; something about me; my contact; etc
+            </div>
+            <div class="techUsed">
+              <ul class="techUsed__icons">
+                <li class="tag__item">
+                  <i class="fab fa-html5" title="HTML5"></i>
+                </li>
+                <li class="tag__item">
+                  <i class="fab fa-css3-alt" title="CSS3"></i>
+                </li>
+                <li class="tag__item">
+                  <i class="fab fa-bootstrap" title="Bootstrap5"></i>
+                </li>
+                <li class="tag__item">
+                  <i class="fab fa-js-square" title="JavaScript"></i>
+                </li>
+              </ul>
             </div>
             <ul class="postcard__tagbox">
-              <li class="tag__item">
-                <i class="fab fa-github mr-2"></i>Github
-              </li>
-              <li class="tag__item"><i class="fas fa-link mr-2"></i>Demo</li>
+              <a
+                href="https://github.com/rendisagala/web-portfolio"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <li class="tag__item">
+                  <i class="fab fa-github mr-2"></i>Github
+                </li></a
+              ><a rel="noopener noreferrer">
+                <li class="tag__item">
+                  <i class="fas fa-link mr-2"></i>Demo
+                </li></a
+              >
             </ul>
           </div>
         </article>
@@ -448,6 +499,7 @@
               ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum
               dolores nobis enim quidem excepturi, illum quos!
             </div>
+
             <ul class="postcard__tagbox">
               <li class="tag__item">
                 <i class="fab fa-github mr-2"></i>Github
@@ -482,6 +534,7 @@
               ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum
               dolores nobis enim quidem excepturi, illum quos!
             </div>
+
             <ul class="postcard__tagbox">
               <li class="tag__item">
                 <i class="fab fa-github mr-2"></i>Github
@@ -616,27 +669,37 @@
           >
             <ul class="social-icons">
               <li>
-                <a class="github" href="https://github.com/rendisagala"
+                <a
+                  target="_blank"
+                  class="github"
+                  href="https://github.com/rendisagala"
                   ><i class="fab fa-github"></i
                 ></a>
               </li>
               <li>
-                <a class="instagram" href="https://instagram.com/rendianjuma/"
+                <a
+                  target="_blank"
+                  class="instagram"
+                  href="https://instagram.com/rendianjuma/"
                   ><i class="fab fa-instagram"></i
                 ></a>
               </li>
               <li>
-                <a class="facebook" href="https://www.facebook.com/rendi.sagala"
+                <a
+                  target="_blank"
+                  class="facebook"
+                  href="https://www.facebook.com/rendi.sagala"
                   ><i class="fab fa-facebook"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="javascript:void(0);"
+                <a target="_blank" class="twitter" href="javascript:void(0);"
                   ><i class="fab fa-twitter"></i
                 ></a>
               </li>
               <li>
                 <a
+                  target="_blank"
                   class="linkedin"
                   href="https://linkedin.com/in/rendi-anjuma-sagala-a3b2421b6"
                   ><i class="fab fa-linkedin"></i
